fixed map names

--- a/SSL Season 3.json
+++ b/SSL Season 3.json
@@ -58,7 +58,7 @@
       "r1_casualties_B": 1275,
       "r2_casualties_A": 1317,
       "r2_casualties_B": 991,
-      "round1_map": "Colquitt's Defence",
+      "round1_map": "Colquitt's Defense",
       "round2_map": "Wagon Road",
       "round1_flipped": false,
       "round2_flipped": false,
@@ -602,7 +602,7 @@
       "r1_casualties_B": 1898,
       "r2_casualties_A": 922,
       "r2_casualties_B": 1277,
-      "round1_map": "Colquitt's Defence",
+      "round1_map": "Colquitt's Defense",
       "round2_map": "Flemming's Meadow",
       "round1_flipped": true,
       "round2_flipped": false,
@@ -1146,7 +1146,7 @@
       "r1_casualties_B": 0,
       "r2_casualties_A": 0,
       "r2_casualties_B": 0,
-      "round1_map": "Colquitt's Defence",
+      "round1_map": "Colquitt's Defense",
       "round2_map": "Roulette Lane",
       "round1_flipped": true,
       "round2_flipped": false,
@@ -1693,7 +1693,7 @@
       "r2_casualties_A": 1943,
       "r2_casualties_B": 876,
       "round1_map": "Confederate Encampment",
-      "round2_map": "Colquitt's Defence",
+      "round2_map": "Colquitt's Defense",
       "round1_flipped": false,
       "round2_flipped": false,
       "unit_player_counts": {
