proportional elo gain again and update S3

--- a/SSL Season 3.json
+++ b/SSL Season 3.json
@@ -1886,6 +1886,63 @@
     "k_factor_provisional": "128",
     "provisional_rounds": "10",
     "sweep_bonus_multiplier": "1.25",
-    "lead_multiplier": "2.0"
+    "lead_multiplier": "3.0",
+    "size_influence": "1.1",
+    "playoff_multiplier": "1.25"
+  },
+  "elo_bias_percentages": {
+    "light_attacker": "10",
+    "heavy_attacker": "25",
+    "light_defender": "10",
+    "heavy_defender": "25"
+  },
+  "map_biases": {
+    "Alexander Farm": "2",
+    "Anderson's Counterattack": "1",
+    "Bloody Lane": "1.5",
+    "Bolivar Heights Camp": "1.5",
+    "Bolivar Heights Redoubt": "2",
+    "Burnside Bridge": "2.5",
+    "Colquitt's Defense": "2",
+    "Confederate Encampment": "2",
+    "Cooke's Countercharge": "1.5",
+    "Cox's Push": "2.5",
+    "Crecy's Cornfield": "1.5",
+    "Crossley Creek": "1",
+    "Crossroads": "0",
+    "Downtown": "1",
+    "Dunker Church": "1.5",
+    "East Woods": "2.5",
+    "East Woods Skirmish": "2",
+    "Flemming's Meadow": "2",
+    "Garland's Stand": "2.5",
+    "Hagertown Turnpike": "0",
+    "Harper's Graveyard": "0",
+    "Hatch's Attack": "2",
+    "High Street": "1",
+    "Hill's Counterattack": "1",
+    "Hooker's Push": "2.5",
+    "Larsen Homestead": "1.5",
+    "Maryland Heights": "1.5",
+    "Miller's Cornfield": "1.5",
+    "Nicodemus Hill": "2.5",
+    "Otto & Sherrick Farm": "0",
+    "Pat's Turnpike": "1.5",
+    "Piper Farm": "2",
+    "Pry Ford": "2",
+    "Pry Grist Mill": "1",
+    "Pry House": "1.5",
+    "Reno's Fall": "1.5",
+    "River Crossing": "2.5",
+    "Roulette Lane": "1.5",
+    "School House Ridge": "1",
+    "Shenandoah Street": "1.5",
+    "Smith Field": "1",
+    "South Woodlot": "1.5",
+    "Stefan's Lot": "1",
+    "Union Camp": "1.5",
+    "Wagon Road": "2",
+    "Washington Street": "1",
+    "West Woods": "1.5"
   }
 }
